	Adresse mit Semikolon: "NAME; ADDRESS". Die Adresse ist nun separat in
	*_ADDRESS verfügbar und nicht mehr in *_NAME enthalten. Der ganze
	Telefonbucheintrag befindet sich in *_ENTRY (entspricht dem vorherigen
	*_NAME)
	
	* testlookup: Links eingefügt, um die Rückwärtssuche-Seiten manuell zu
	überprüfen

2008-08-16:

	callmonitor-1.12 zum öffentlichen Testen freigegeben

2008-08-23:

	* reverse_config: Es wurde fälschlicherweise immer der
	Standardanbieter benutzt. (Dank an DennisBK75)

	* webui: Unterstützung für neue query.txt-Schnittstelle; sollte den
	Fehler bei aktuellen 7270-Labor-Firmwares beheben, dass die
	Standortangaben nicht korrekt gelesen werden können. (Dank an
	DennisBK75 und olistudent)

	* webui: Kollision bei Funktionsnamen behoben (womöglich haben dadurch
	einige POST-Requests nicht funktioniert, z.B. der Login)

	callmonitor-1.12.2 (Bugfix-Release)

2008-09-14:

	* mail: Unterstützung für SSL/TLS
	
	* dream2message: Darstellung von Umlauten behoben (benötigt UTF-8)

2008-09-20:

	callmonitor-1.12.3

2009-01-11:

	* callaction: Kurze Kommandozeilenhilfe
	* roku.sh: sbxmessage für mehrzeilige Nachrichten an SoundBridge

2009-03-13:

	* reverse: DasTelefonbuch und 11880 aktualisiert

2009-03-15:

	callmonitor-1.12.4

2009-03-27:

	* droptoggle/rc: toggle funktionierte nicht

	callmonitor-1.12.5

2009-04-10:

	* reverse: GoYellow hat auf UTF8-Kodierung umgestellt
	* phonebook: AVM-Telefonbuch wird nun intern als Baum gespeichert
	=> relativ konstante Zugriffszeiten auch bei 1000 Einträgen
	(Dank an Telefonmännchen)
	* phonebook: Umlaute beim Lesen vom AVM-Telefonbuch korrigiert
	(Kodierung wurde geändert)

2009-05-09:

	* reverse: DasÖrtliche hat seine Webseiten wieder einmal geändert:
	Rückwärtssuche angepasst

	callmonitor-1.13

2009-05-31:

	* webui.sh: Unterstützung der neuen Session-IDs

	callmonitor-1.14

2009-06-06:

	* dbox*: Ersetzung von ";" und "&", die von der DBox nicht richtig
	verarbeitet zu werden scheinen